fixed the spacing on the clothing module images

--- a/src/Styles/productModal.css
+++ b/src/Styles/productModal.css
@@ -2,7 +2,7 @@
     height: 80vh;
     width: 80vw;
     margin-left: 10vw;
-    background-color: rgba(255, 255, 255, 0.8); 
+    background-color: rgba(255, 255, 255, 0.5); 
     margin-top: 10vh; 
     z-index: 20;
     overflow-y: auto;
